# agent-grid

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.bootstrap  README.md  build-bootstrap.sh  deploy.py  deploy.sh  dev.id  models  pyproject.toml  setup.cfg  start_server.sh  start_swarm.sh
.claude/agents/: problem-solver.md
docs/: macos_developer_guide.md  macos_menu_app_plan.md
electron/: .gitignore  README.md  forge.config.js  main.js  package-lock.json  package.json  preload.js  setup_python.sh
electron/assets/icons/: icon.icns
electron/config/: defaults.json
electron/renderer/: index.html  renderer.js  styles.css
electron/runtime/: bootstrap.js
examples/: run_client.py  run_gpt_oss.py
identity_files/: identity_0.key  identity_1.key  identity_2.key  identity_3.key  identity_4.key  identity_5.key  identity_6.key  identity_7.key  identity_8.key  identity_9.key
macos/AgentGridMenuApp/: AgentGridMenuApp.swift  ConfigManager.swift  LogManager.swift  ModelDeviceDiscovery.swift  ModelSelectionWindow.swift  PreferencesView.swift  README.md  ServerProcessController.swift  StatusBarController.swift
src/agentgrid/: __init__.py  constants.py  data_structures.py
src/agentgrid/cli/: __init__.py  run_dht.py  run_prod_server.sh  run_server.py
src/agentgrid/client/: __init__.py  config.py  from_pretrained.py  inference_session.py  lm_head.py  performance_monitor.py  ptune.py  remote_forward_backward.py  remote_generation.py  remote_sequential.py  sequential_autograd.py  session_pool.py
src/agentgrid/client/routing/: __init__.py  sequence_info.py  sequence_manager.py
src/agentgrid/launcher/: __init__.py  discovery.py  server.py
src/agentgrid/models/: __init__.py  _mask_cache.py
src/agentgrid/models/bloom/: __init__.py  block.py  config.py  model.py
src/agentgrid/models/falcon/: __init__.py  config.py  model.py
src/agentgrid/models/gpt_oss/: __init__.py  block.py  config.py  model.py
src/agentgrid/models/llama/: __init__.py  block.py  config.py  model.py  speculative_model.py
src/agentgrid/models/mixtral/: __init__.py  block.py  config.py  model.py
src/agentgrid/models/nemotron/: __init__.py  block.py  block_config.py  config.py  configuration_decilm.py  kernels.py  model.py  modeling_decilm.py  transformers_4_44_2__activations.py  transformers_4_44_2__cache_utils.py  transformers_4_44_2__configuration_llama.py  transformers_4_44_2__modeling_flash_attention_utils_backward_compat.py  transformers_4_44_2__modeling_outputs.py  transformers_4_44_2__modeling_rope_utils.py  transformers_4_44_2__pytorch_utils.py  variable_cache.py
src/agentgrid/models/nemotron_h/: config.py  configuration_nemotron_h.py  modeling_nemotron_h.py  nemotron_toocall_parser_no_streaming.py  (+1 more)
src/agentgrid/server/: backend.py  block_functions.py  block_selection.py  block_utils.py  from_pretrained.py  handler.py  kernels.py  memory_cache.py  reachability.py  server.py  task_pool.py  task_prioritizer.py  throughput.py
src/agentgrid/utils/: __init__.py  asyncio.py  auto_config.py  convert_block.py  cuda_graphs.py  dht.py  disk_cache.py  hf_auth.py  logging.py  misc.py  packaging.py  peft.py  ping.py  random.py  version.py
(+13 files in other folders)
