[metadata]
name = agent-grid
version = file: src/agentgrid/VERSION
author = ReEnvision AI
description = Easy way to efficiently run 100B+ language models without high-end GPUs
url = https://github.com/reenvision-ai/agent-grid
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Software Development
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    torch>=1.12
    bitsandbytes>=0.45.2
    accelerate>=0.27.2
    huggingface-hub>=0.11.1
    tokenizers>=0.13.3
    transformers==4.52.3  # if you change this, please also change version assert in agentgrid/__init__.py
    speedtest-cli>=2.1.3
    hivemind @ git+https://github.com/ReEnvision-AI/hivemind@1.2.4
    tensor_parallel>=1.0.23
    humanfriendly
    async-timeout>=4.0.2
    cpufeature>=0.2.0; platform_machine == "x86_64"
    packaging>=20.9
    sentencepiece>=0.1.99
    peft==0.8.2
    safetensors>=0.3.1
    Dijkstar>=2.6.0
    numpy>=2.0
    ruff>=0.4.8
    triton==3.2.0
    environs==14.1.1

[options.extras_require]
dev =
    pytest==8.35
    pytest-forked
    pytest-asyncio==0.26.0
    psutil
    pytest-xdist
    pytest-timeout
    pytest-cov
    ruff==0.11.2

[options.packages.find]
where = src
