[metadata]
name = agent-grid
version = file: src/agentgrid/VERSION
author = ReEnvision AI
description = Easy way to efficiently run 100B+ language models without high-end GPUs
url = https://github.com/reenvision-ai/agent-grid
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Software Development
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.11
install_requires =
    torch==2.6.0
    bitsandbytes==0.46.0
    accelerate==1.7.0
    huggingface-hub==0.34.3
    tokenizers==0.21.2
    transformers==4.54.1  # if you change this, please also change version assert in agentgrid/__init__.py
    speedtest-cli==2.1.3
    hivemind @ git+https://github.com/ReEnvision-AI/hivemind@1.2.4
    tensor_parallel==2.0.0
    humanfriendly==10.0
    async-timeout==5.0.1
    cpufeature==0.2.1; platform_machine == "x86_64"
    packaging==25.0
    sentencepiece==0.2.0
    peft==0.8.2
    safetensors==0.5.3
    Dijkstar==2.6.0
    numpy==2.3.1
    triton==3.2.0
    environs==14.1.1

[options.extras_require]
dev =
    pytest==8.35
    pytest-forked
    pytest-asyncio==0.26.0
    psutil
    pytest-xdist
    pytest-timeout
    pytest-cov
    ruff==0.11.2

[options.packages.find]
where = src
